Fixed error of scrolling and page cutting in half on smaller screens

--- a/signup.css
+++ b/signup.css
@@ -1,11 +1,7 @@
-html{
-    overflow: hidden;
-}
 
 body{
     padding: 0;
     margin: 0; 
-    height: 100vh;
 } 
 
 .container{
@@ -15,7 +11,7 @@ body{
 
 header{
     background: #14213D;
-    border-top: 4px solid #fac311;
+    border-top: 4px solid #fca311;
 }
 header::after{
     content: '';
@@ -26,7 +22,7 @@ header::after{
 .logo{
     float: left;
     padding: 10px 25px;
-    color:  rgb(255, 166, 58);
+    color:  #fca311;
 }
 
 nav{
@@ -41,7 +37,7 @@ header a {
 nav li :hover {
     background: #520505;
     font-weight: bolder;
-    color: #fac311
+    color: #fca311
 }
 
 nav ul {
@@ -57,11 +53,10 @@ nav  li {
 }
 
 .container2 {
-    margin-top: 3%; 
-    margin-bottom: 3%;
+    margin: 3% auto;
     border: 2px solid  #14213D;
-    width: 30%;
-    margin-left: 35%;
+    width: 70%;
+    max-width: 350px;
     height: 115%;
 }
 
@@ -83,7 +78,7 @@ input {
 }
 
 button{
-     background: #fac311;
+     background: #fca311;
      border: none;
      height: 35px;
      margin-bottom: 5px;
@@ -116,7 +111,6 @@ footer{
         padding: 0;
         margin: 0; 
         height: 100vh;
-        width: 50%;
         background-size: cover;
         background-position: center;
         overflow-x: hidden;
